--- a/css/custom-post.css
+++ b/css/custom-post.css
@@ -744,7 +744,7 @@ img.featurette-image{
 
 .post {
     text-align: center;
-  padding: 23px 120px;
+ padding: 23px 200px;
 
 }
 
@@ -757,10 +757,11 @@ img.featurette-image{
 }
 
 .post-date{
-    text-transform: uppercase;
-  font-size: 11px;
-  letter-spacing: 4pt;
-  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 10px;
+  letter-spacing: 4px;
+  font-weight: 500;
+  margin-right: 10px;
 }
 
 .post-category{
@@ -778,25 +779,26 @@ img.featurette-image{
 
 
 .post-author{
-      text-transform: uppercase;
-  font-size: 11px;
+text-transform: uppercase;
+  font-size: 10px;
   letter-spacing: 4px;
   /* background-color: rgb(81, 80, 80); */
   /* color: #FFFFFF; */
   /* padding: 3px 6px; */
   /* border-radius: 2px; */
-  margin-left: 20px;
-  font-weight: 800;
+  margin-left: 10px;
+  font-weight: 400;
 }
 
 .post-content {
   line-height: 2;
   margin: 50px 0px;
-  font-size: 16px;
-  font-weight: 300;
+  font-size: 14px;
+  /* font-weight: 400; */
   letter-spacing: 1pt;
   text-align: left;
   color: #000;
+  font-family: 'Noto-Serif';
 }
 
 .comments-title {
