--- a/css/custom-blog.css
+++ b/css/custom-blog.css
@@ -742,41 +742,47 @@ img.featurette-image{
 }
 
 .post-title{
-   font-weight: 300;
+  font-weight: 500;
   color: #000;
-  letter-spacing: 1.5px;
-  font-size: 25px;
+  letter-spacing: 2px;
+  font-size: 18px;
+  text-transform: uppercase;
 }
 
 .post-date{
-   text-transform: uppercase;
-  font-size: 11px;
+  text-transform: uppercase;
+  font-size: 10px;
   letter-spacing: 4px;
-  font-weight: 800;
+  font-weight: 600;
+  margin-right: 10px;
 }
 
 .post-category{
-    text-transform: uppercase;
-  font-size: 11px;
+text-transform: uppercase;
+  font-size: 10px;
   letter-spacing: 4px;
   /* background-color: rgb(81, 80, 80); */
   /* color: #FFFFFF; */
   /* padding: 3px 6px; */
   /* border-radius: 2px; */
-  margin-left: 20px;
-  font-weight: 800;
+  margin-left: 10px;
+  font-weight: 600;
 }
 
 .post-author{
-      text-transform: uppercase;
-  font-size: 11px;
+  text-transform: uppercase;
+  font-size: 10px;
   letter-spacing: 4px;
   /* background-color: rgb(81, 80, 80); */
   /* color: #FFFFFF; */
   /* padding: 3px 6px; */
   /* border-radius: 2px; */
   margin-left: 20px;
-  font-weight: 800;
+  font-weight: 600;
+}
+
+.slash {
+  font-size: 13px;
 }
 
 .lead {
