--- a/css/custom-blog.css
+++ b/css/custom-blog.css
@@ -679,24 +679,116 @@ height:100%;
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  /*height: 100%;*/
+  /* height: 100%; */
   background-color: #777;
+  width: auto;
+  max-height: 600px;
+  background-size: cover;
 }
 .carousel-inner > .item > img {
 /*  position: absolute;
   top: 0;
   left: 0;*/
-  min-width: 100%;
-  /*height: 100%;*/
+  
+
+  /* min-width: 100%; */
+  
+
+  /* height: 100%; */
   background-repeat: no-repeat;
+  
+
   background-size:cover;
+  
+
+  min-height: 100%;
+
+  height: 430px;
+
+  width: 100%;
+
 }
+
+#carousel-custom {
+    margin: 20px 0;
+    width: 64%;
+}
+#carousel-custom .carousel-indicators {
+    margin: 10px 0 0;
+    overflow: auto;
+    position: static;
+    text-align: center;
+    white-space: nowrap;
+    width: 100%;
+}
+#carousel-custom .carousel-indicators li {
+    background-color: transparent;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    display: inline-block;
+    height: auto;
+    margin: 0 !important;
+    width: auto;
+}
+#carousel-custom .carousel-indicators li img {
+    display: block;
+    opacity: 0.5;
+}
+#carousel-custom .carousel-indicators li.active img {
+    opacity: 1;
+}
+#carousel-custom .carousel-indicators li:hover img {
+    opacity: 0.75;
+}
+#carousel-custom .carousel-outer {
+    position: relative;
+}
+
+.row.clearfix {
+  display: flex;
+}
+
+.show-day {
+  /* display: inline-block; */
+  /* float: left; */
+  height: 350px;
+  width: 350px;
+  border: 1px solid #000;
+  /* margin-top: 20px; */
+  /* margin-left: 100px; */
+  margin: auto auto;
+}
+
+
+.show-day .text {
+  text-align: center;
+  margin: auto auto;
+  /* height: 100%; */
+  vertical-align: middle;
+  /* padding: 67px 0px; */
+  top: 100px;
+  position: relative;
+  line-height: 2;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  font-size: 26px;
+  font-weight: 300;
+}
+
+
+
 
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
 /* Center align the text within the three columns below the carousel */
+
+.container.marketing{
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
 .marketing .col-lg-4 {
   margin-bottom: 20px;
   text-align: center;
@@ -711,8 +803,16 @@ height:100%;
 
 .container.posts {
   margin: 0;
-  width: 75%;
+  width: 70%;
 }
+
+
+
+.col-sm-3{
+  padding: 0px;
+}
+
+
 
 /* Featurettes
 ------------------------- */
@@ -797,6 +897,33 @@ span.slash {
   .lead {
      font-family: 'Noto Serif', serif;
   }
+}
+
+.searchbar {
+  width: 40%;
+  display: none;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  border-top: none;
+  color: #555;
+  border-left: none;
+  background-color: #fff;
+  border-right: none;
+  background-image: none;
+  border-bottom: 2px solid #000;
+  /* border-radius: 4px; */
+  /* -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075); */
+  /* box-shadow: inset 0 1px 1px rgba(0,0,0,.075); */
+  /* -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s; */
+  /*-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+  /* transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; */
 }
 
 /* RESPONSIVE CSS
